--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "ImagickTextBox\\ImagickTextBox\\": "src/"
+            "ImagickTextBox\\": "src/"
         }
     },
     "authors": [
